# alg-python

./: .gitignore  Pipfile  pyproject.toml  readme.md  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  init.sh
src/leetcode/n1/: solution.py
src/leetcode/n1010/: solution.py
src/leetcode/n1014/: solution.py
src/leetcode/n1019/: solution.py
src/leetcode/n1031/: solution.py
src/leetcode/n1074/: solution.py
src/leetcode/n1081/: solution.py
src/leetcode/n1095/: solution.py
src/leetcode/n1124/: solution.py
src/leetcode/n1128/: solution.py
src/leetcode/n1130/: solution.py
src/leetcode/n1201/: solution.py
src/leetcode/n121/: solution.py
src/leetcode/n1277/: solution.py
src/leetcode/n1310/: solution.py
src/leetcode/n1329/: solution.py
src/leetcode/n1439/: solution.py
src/leetcode/n1441/: solution.py
src/leetcode/n1442/: solution.py
src/leetcode/n1446/: solution.py
src/leetcode/n1472/: solution.py
src/leetcode/n1475/: solution.py
src/leetcode/n1477/: solution.py
src/leetcode/n1504/: solution.py
src/leetcode/n1508/: solution.py
src/leetcode/n1512/: solution.py
src/leetcode/n1523/: solution.py
src/leetcode/n1524/: solution.py
src/leetcode/n153/: solution.py
src/leetcode/n1534/: solution.py
src/leetcode/n1539/: solution.py
src/leetcode/n154/: solution.py
src/leetcode/n1546/: solution.py
src/leetcode/n1552/: solution.py
src/leetcode/n1590/: solution.py
src/leetcode/n162/: solution.py
src/leetcode/n1631/: solution.py
src/leetcode/n1673/: solution.py
src/leetcode/n1679/: solution.py
(+359 files in other folders)
