[project]
name = "alg-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sortedcontainers>=2.4.0",
    "sortedcontainers-stubs>=2.4.3",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
